--- a/3.tex
+++ b/3.tex
@@ -88,6 +88,16 @@
       \end{tabular}
     \end{center}
 
+  \item
+    \textit{The equations in Section 3.1 are for the continuing case and need to be
+    modified (very slightly) to apply to episodic tasks. Show that you know the modifications
+    needed by giving the modified version of (3.3).}
+
+    \[
+    \sum\limits_{s' \in \mathcal{S}^+} \sum\limits_{r \in \mathcal{R}} p(s', r | s, a) = 1 \text{, for all }
+    s \in \mathcal{S}, a \in \mathcal{A}(s)
+    \]
+
 
 \end{enumerate}
 \end{document}
