--- a/3.tex
+++ b/3.tex
@@ -109,5 +109,17 @@
   in the return. In the continuing formulation, all the later failures have an effect on the
   return. (Although the later the failure occurs, the smaller the effect becomes.)
 
+\item
+  \textit{Imagine that you are designing a robot to run a maze. You decide to give it a
+  reward of +1 for escaping from the maze and a reward of zero at all other times. The task
+  seems to break down naturally into episodes—the successive runs through the maze—so
+  you decide to treat it as an episodic task, where the goal is to maximize expected total
+  reward (3.7). After running the learning agent for a while, you find that it is showing
+  no improvement in escaping from the maze. What is going wrong? Have you effectively
+  communicated to the agent what you want it to achieve?}
+
+  The expected total reward is always $1$, the agent has no motivation to escape the maze
+  early.
+
 \end{enumerate}
 \end{document}
