--- a/3.tex
+++ b/3.tex
@@ -244,6 +244,19 @@
     v_\pi(s) = \mathbb{E}(q_\pi(s, a) | \text{a is chosen following }\pi) = \sum\limits_a \pi(a|s) q_\pi(s, a)
   \end{align*}
 
+\item
+  \textit{The value of an action, $q_\pi(s, a)$, depends on the expected next reward and
+  the expected sum of the remaining rewards. Again we can think of this in terms of a
+  small backup diagram, this one rooted at an action (state–action pair) and branching to
+  the possible next states: [Diagram.]
+  Give the equation corresponding to this intuition and diagram for the action value,
+  $q\pi(s, a)$, in terms of the expected next reward, $R_{t+1}$, and the expected next state value,
+  $v\pi(S_{t+1})$, given that $S_t = s$ and $A_t = a$. This equation should include an expectation but
+  not one conditioned on following the policy. Then give a second equation, writing out the
+  expected value explicitly in terms of $p(s', r|s, a)$ defined by (3.2), such that no expected
+  value notation appears in the equation.}
 
+  \[q_\pi(s, a) = \mathbb{E}(R_{t + 1}) + \gamma \mathbb{E} (v_\pi (s') | S_{t + 1} = s')
+  = \sum\limits_{s', r} p(s', r | s, a) (r + \gamma v_\pi(s'))\]
 \end{enumerate}
 \end{document}
