--- a/3.tex
+++ b/3.tex
@@ -241,7 +241,7 @@
   in terms of $\pi(a|s)$ such that no expected value notation appears in the equation.}
 
   \begin{align*}
-    v_\pi(s) = \mathbb{E}(q_\pi(s, a) | \text{a is chosen following }\pi) = \sum\limits_a \pi(a|s) q_\pi(s, a)
+    v_\pi(s) = \mathbb{E}(q_\pi(s, a) | S_t = s, a = A_t) = \sum\limits_a \pi(a|s) q_\pi(s, a)
   \end{align*}
 
 \item
@@ -256,7 +256,7 @@
   expected value explicitly in terms of $p(s', r|s, a)$ defined by (3.2), such that no expected
   value notation appears in the equation.}
 
-  \[q_\pi(s, a) = \mathbb{E}(R_{t + 1}) + \gamma \mathbb{E} (v_\pi (s') | S_{t + 1} = s')
+  \[q_\pi(s, a) = \mathbb{E}(R_{t + 1}) + \gamma \mathbb{E} (v_\pi (S_{t + 1}) | s = S_t, a = A_t)
   = \sum\limits_{s', r} p(s', r | s, a) (r + \gamma v_\pi(s'))\]
 \end{enumerate}
 \end{document}
