--- a/3.tex
+++ b/3.tex
@@ -334,6 +334,10 @@
   So the return we can get is
   \[\sum\limits_{i = 0}^{\infty} \gamma^{5i} 10 = \frac{1}{1 - \gamma^5} = \frac{1}{1 - 0.9^5} \approx 2.442\]
 
+\item
+  \textit{Give an equation for $v_\ast$ in terms of $q_\ast$.}
+
+  \[v_\ast(s) = \max_{a \in \mathbb{A}(s)} q_\ast(s, a)\]
 
 
 \end{enumerate}
