--- a/3.tex
+++ b/3.tex
@@ -339,6 +339,10 @@
 
   \[v_\ast(s) = \max_{a \in \mathbb{A}(s)} q_\ast(s, a)\]
 
+\item
+  \textit{Give an equation for $q_\ast$ in terms of $v_\ast$ and the four-argument p.}
+
+  \[q_\ast(s) = \sum\limits_{s', r}p(s', r | s, a) (r + \gamma v_\ast(s'))\]
 
 \end{enumerate}
 \end{document}
