--- a/3.tex
+++ b/3.tex
@@ -344,5 +344,16 @@
 
   \[q_\ast(s) = \sum\limits_{s', r}p(s', r | s, a) (r + \gamma v_\ast(s'))\]
 
+\item
+  \textit{Give an equation for $\pi_\ast$ in terms of $q_\ast$.}
+
+  \[\pi_\ast(s) = \max_{a \in \mathbb{A}(s)} q_\ast(s, a)\]
+
+\item
+  \textit{Give an equation for $\pi_\ast$ in terms of $v_\ast$ and the four-argument p.}
+
+  \[\pi_\ast(s) = \max_{a \in \mathbb{A}(s)} \sum\limits_{s', r}p(s', r | s, a) (r + \gamma v_\ast(s'))\]
+
+
 \end{enumerate}
 \end{document}
