--- a/4.tex
+++ b/4.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage{algorithmic}
 \DeclareMathOperator*{\argmax}{argmax}
+\graphicspath{ {./4.7/} }
 \pagestyle{empty}
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -114,6 +115,26 @@
     on the right, based on the distribution $\pi(a|s)$.
 
     In step $1$, we should start with an $\epsilon$-soft policy $\pi$.
+
+  \item
+    \textit{Programming. Write a program for policy iteration and re-solve Jack’s car
+    rental problem with the following changes. One of Jack’s employees at the first location
+    rides a bus home each night and lives near the second location. She is happy to shuttle
+    one car to the second location for free. Each additional car still costs \$2, as do all cars
+    moved in the other direction. In addition, Jack has limited parking space at each location.
+    If more than 10 cars are kept overnight at a location (after any moving of cars), then an
+    additional cost of \$4 must be incurred to use a second parking lot (independent of how
+    many cars are kept there). These sorts of nonlinearities and arbitrary dynamics often
+    occur in real problems and cannot easily be handled by optimization methods other than
+    dynamic programming. To check your program, first replicate the results given for the
+    original problem.}
+
+    The code can be found \href{https://github.com/hannagabor/SBRL/blob/master/4.7/main.go}{here}.
+    The $x$ axis shows the number of cars at the second location, while the $y$ axis corresponds
+    to the number of cars at the first location.
+    \begin{center}
+      \includegraphics{printed_pi}
+    \end{center}
 
 \end{enumerate}
 \end{document}
