Add color to contourmap.

--- a/4.tex
+++ b/4.tex
@@ -131,9 +131,10 @@
 
     The code can be found \href{https://github.com/hannagabor/SBRL/blob/master/4.7/main.go}{here}.
     The $x$ axis shows the number of cars at the second location, while the $y$ axis corresponds
-    to the number of cars at the first location.
+    to the number of cars at the first location. I used two representations.
     \begin{center}
       \includegraphics{printed_pi}
+      \includegraphics[scale=0.3]{pi}
     \end{center}
 
 \end{enumerate}
