--- a/4.tex
+++ b/4.tex
@@ -137,5 +137,13 @@
       \includegraphics[scale=0.3]{pi}
     \end{center}
 
+  \item
+    \textit{Why does the optimal policy for the gambler’s problem have such a curious form?
+    In particular, for capital of 50 it bets it all on one flip, but for capital of 51 it
+    does not. Why is this a good policy?}
+
+    I don't know. :) Based on a recent ICLR \href{https://arxiv.org/pdf/2001.00102.pdf}{paper},
+    betting $\min\{s, 100 -s\}$ is also an optimal strategy.
+
 \end{enumerate}
 \end{document}
