--- a/4.tex
+++ b/4.tex
@@ -145,5 +145,12 @@
     I don't know. :) Based on a recent ICLR \href{https://arxiv.org/pdf/2001.00102.pdf}{paper},
     betting $\min\{s, 100 -s\}$ is also an optimal strategy.
 
+  \item
+    \textit{Programming. Implement value iteration for the gambler’s problem and
+    solve it for $p_h$ = 0.25 and $p_h$ = 0.55. In programming, you may find it convenient to
+    introduce two dummy states corresponding to termination with capital of 0 and 100,
+    giving them values of 0 and 1 respectively. Show your results graphically, as in Figure 4.3.
+    Are your results stable as $\theta \rightarrow$ 0?}
+
 \end{enumerate}
 \end{document}
