--- a/4.tex
+++ b/4.tex
@@ -6,7 +6,7 @@
 \usepackage{hyperref}
 \usepackage{algorithmic}
 \DeclareMathOperator*{\argmax}{argmax}
-\graphicspath{ {./4.7/} }
+\graphicspath{ {./4.7/} {./4.9/}}
 \pagestyle{empty}
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
@@ -151,6 +151,16 @@
     introduce two dummy states corresponding to termination with capital of 0 and 100,
     giving them values of 0 and 1 respectively. Show your results graphically, as in Figure 4.3.
     Are your results stable as $\theta \rightarrow$ 0?}
+
+    \begin{center}
+      \includegraphics[scale=0.6]{gambling_value_0.25}
+
+      \includegraphics[scale=0.6]{gambling_policy_0.25}
+
+      \includegraphics[scale=0.6]{gambling_value_0.55}
+
+      \includegraphics[scale=0.6]{gambling_policy_0.55}
+    \end{center}
 
 \end{enumerate}
 \end{document}
