--- a/4.tex
+++ b/4.tex
@@ -162,5 +162,10 @@
       \includegraphics[scale=0.6]{gambling_policy_0.55}
     \end{center}
 
+  \item
+  \textit{What is the analog of the value iteration update (4.10) for action values,
+    $q_{k+1}(s, a)$?}
+
+    \[q_{k + 1}(s, a) \doteq \sum\limits_{r, s'} p(s', r | s, a) \Big(r + \max_{a'} q_k(s', a')\Big)\]
 \end{enumerate}
 \end{document}
