--- a/5.tex
+++ b/5.tex
@@ -34,6 +34,12 @@
     The frontmost values in the upper diagram are higher than in the lower, because
     having a usable ace increases your chances, as mentioned above.
 
+  \item
+    \textit{Suppose every-visit MC was used instead of first-visit MC on the blackjack
+      task. Would you expect the results to be very different? Why or why not?}
+
+    I would expect them to be exactly the same. We can't reach the same state twice in a game,
+    so the two methods are the same.
 
 \end{enumerate}
 \end{document}
