--- a/5.tex
+++ b/5.tex
@@ -41,5 +41,10 @@
     I would expect them to be exactly the same. We can't reach the same state twice in a game,
     so the two methods are the same.
 
+  \item
+    \textit{What is the backup diagram for Monte Carlo estimation of $q_\pi$?}
+
+    It's the same as for $v_\pi$ on page 95, except for it starts from a state-action pair.
+
 \end{enumerate}
 \end{document}
