--- a/5.tex
+++ b/5.tex
@@ -56,8 +56,18 @@
     We can get rid of $Returns$ and introduce $VisitCounts$ that stores an integer
     for each state-action pair. Instead of appending $G$, we would increase the
     corresponding element in $VisitCount$ by one and update $Q(S_t, A_t)$ to
-    $(Q(S_t, A_t) \cdot (n - 1) + G)/ n$, where n is $VisitCount(S_t, A_t)$. 
+    $(Q(S_t, A_t) \cdot (n - 1) + G)/ n$, where n is $VisitCount(S_t, A_t)$.
 
+  \item
+    \textit{Consider an MDP with a single nonterminal state and a single action
+    that transitions back to the nonterminal state with probability p and transitions to the
+    terminal state with probability 1 - p. Let the reward be +1 on all transitions, and let
+    $\gamma = 1$. Suppose you observe one episode that lasts 10 steps, with a return of 10. What
+    are the first-visit and every-visit estimators of the value of the nonterminal state?}
+
+    If the estimator takes the average return for the corresponding state, then the
+    first-visit estimation of the value of the nonterminal state is $10$, the every-visit
+    estimation is $(10 + 9 + ... + 1)/9 = 5.5$.
 
 \end{enumerate}
 \end{document}
