--- a/5.tex
+++ b/5.tex
@@ -89,5 +89,24 @@
     Altogether, after the initial zero estimations, we will most probably start with an
     estimation of $1$ or $-1$, and will maintain that estimation for some time.
 
+  \item
+    \textit{The results with Example 5.5 and shown in Figure 5.4 used a first-visit MC
+    method. Suppose that instead an every-visit MC method was used on the same problem.
+    Would the variance of the estimator still be infinite? Why or why not?}
+
+    Yes, the variance of the estimator would still be infinite:
+    \begin{align*}
+      \mathbb{E}_b\left(\left(\frac{1}{T}\sum\limits_{k = 0} ^{T - 1}
+      \prod\limits_{t = T - 1 - k}^{T - 1} \frac{\pi(A_t | S_t)}{b(A_t|S_t)}G_0 \right)^2\right)
+      &= \sum\limits_{l = 0}^\infty \left (0.1 \cdot 0.9^l \cdot \frac{1}{2^{l + 1}} \cdot \frac{1}{l + 1} \sum\limits_{m = 1}^l 2^{2m} \right)\\
+      &= 0.1 \sum\limits_{l = 0}^\infty \left(0.9^l \cdot \frac{1}{2^{l + 1}} \cdot \frac{1}{l + 1} \frac{4 ^ {l + 1} - 4}{3} \right)\\
+      &= 0.1 \sum\limits_{l = 0}^\infty \left(0.9^l \frac{4 ^ {l + 1} - 4}{3(l + 1)2^{l + 1}} \right)\\
+      &= 0.1 \sum\limits_{l = 0}^\infty \left(0.9^l \frac{2 ^ {2(l + 1)}}{3(l + 1)2^{l + 1}} - 0.9^l \frac{4}{3(l + 1)2^{l + 1}} \right)\\
+      &= 0.1 \sum\limits_{l = 0}^\infty \left(0.9^l \frac{2 ^ {l + 1}}{3(l + 1)} - 0.9^l \frac{4}{3(l + 1)2^{l + 1}} \right)\\
+      &= 0.1 \sum\limits_{l = 0}^\infty \left(\frac{2 \cdot 1.8 ^l}{3(l + 1)} - \frac{2 \cdot 0.45^l}{3(l + 1)} \right)\\
+      &= 0.2 \sum\limits_{l = 0}^\infty \left(\frac{1.8 ^l - 0.45^l}{3(l + 1)} \right)\\
+      &\ge 0.2 \sum\limits_{l = 0}^\infty \left(\frac{1.8 ^l - 1}{3(l + 1)} \right) = \infty\\
+    \end{align*}
+
 \end{enumerate}
 \end{document}
