--- a/5.tex
+++ b/5.tex
@@ -4,7 +4,7 @@
 \usepackage{amssymb, amsmath, amsthm}
 % \usepackage{graphics, graphicx}
 \usepackage{hyperref}
-% \usepackage{algorithmic}
+\usepackage{algorithmic, algorithm}
 % \DeclareMathOperator*{\argmax}{argmax}
 % \graphicspath{ {./4.7/} {./4.9/}}
 \pagestyle{empty}
@@ -107,6 +107,33 @@
       &= 0.2 \sum\limits_{l = 0}^\infty \left(\frac{1.8 ^l - 0.45^l}{3(l + 1)} \right)\\
       &\ge 0.2 \sum\limits_{l = 0}^\infty \left(\frac{1.8 ^l - 1}{3(l + 1)} \right) = \infty\\
     \end{align*}
+
+  \item
+    \textit{Modify the algorithm for first-visit MC policy evaluation (Section 5.1) to
+    use the incremental implementation for sample averages described in Section 2.4.}
+    \begin{algorithm}
+      \caption{Incremental implementation of first-visit MC policy evaluation}
+    \begin{algorithmic}
+      \STATE Input: a policy $\pi$ to be evaluated
+      \STATE
+      \STATE Initialize:
+      \STATE $V(s) \in \mathbb{R}$, arbitrarily, for all $s \in S$
+      \STATE $Seen(s) \leftarrow 0$, for all $s \in S$
+      \STATE
+      \WHILE {true}
+      \STATE Generate an episode following $\pi: S_0, A_0, R_1, S_1, \dots, R_T$
+      \STATE $G \leftarrow 0$
+      \FOR {$t = T - 1, T - 2, \dots, 0$}
+      \STATE $G \leftarrow \gamma G_t + R_{t + 1}$
+      \IF {$S_t$ does not appear in $S_0, \dots, S_{t - 1}$}
+      \STATE $Seen(S_t) \leftarrow Seen(S_t) + 1$
+      \STATE $n \leftarrow Seen(S_t)$
+      \STATE $V(S_t) \leftarrow \frac{(n - 1) V(S_t) + G}{n}$
+      \ENDIF
+      \ENDFOR
+      \ENDWHILE
+    \end{algorithmic}
+  \end{algorithm}
 
 \end{enumerate}
 \end{document}
